using System;
using UnityEngine;

namespace Player
{
    [Serializable]
    public static class Inputs
    {
        public static string Vertical = "Vertical";
        public static string Horizontal = "Horizontal";
        public static string Yaw = "Yaw";
        public static string Pitch = "Pitch";
        public static string Jump = "Jump";
        public static string Sprint = "Sprint";
    }
}