using UnityEngine;

namespace Player
{
    public class Inputs
    {
        public string Vertical = "Vertical";
        public string Horizontal = "Horizontal";
        public string Yaw = "Yaw";
        public string Pitch = "Pitch";
        public string Jump = "Jump";
        public string Sprint = "Sprint";
    }
}
